# conda-tensorflow

./: Makefile  README.md  pyproject.toml
notebooks/: example_list_gpus.ipynb  example_tensorflow.ipynb
