[tool.poetry]
name = "tensorflow-environment"
version = "0.1.0"
description = "tensorflow environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
pandas = "2.2.2"
jupyterlab = "4.2.4"
notebook = "7.2.1"
nbconvert = "7.16.4"
ipywidgets = "8.1.3"
matplotlib = "3.8.4"
scikit-learn = "1.5.1"
sweetviz = "2.3.1"
tqdm = "4.66.2"
pyorc = "0.9.0"
pyarrow = "16.1.0"
tenacity = "8.2.2"
numpy = "1.26.4"
plotly = "5.23"
seaborn = "0.13.2"

[tool.poetry.group.fix.dependencies]
filelock = "3.15.4"

[tool.poetry.group.tensorflow.dependencies]
tensorflow = {version = "2.19.0", extras = ["and-cuda"]}
tensorboard = {version = "2.19.0"}
tensorflow-datasets = {version = "4.9.8"}

[tool.poetry.group.tensorrt.dependencies]
tensorrt = {version = "10.5.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
