[tool.poetry]
name = "tensorflow-environment"
version = "0.1.0"
description = "tensorflow environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"

[tool.poetry.group.util.dependencies]
tqdm = "4.66.2"
tenacity = "8.2.2"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "4.3.5"
notebook = "7.3.2"
nbconvert = "7.16.6"
ipywidgets = "8.1.5"

[tool.poetry.group.data.dependencies]
polars = "1.17.1"
pandas = "2.2.2"

[tool.poetry.group.calculation.dependencies]
numpy = "1.26.4"
scipy = "1.15.2"
statsmodels = "0.14.4"
shapely = "2.0.6"

[tool.poetry.group.plot.dependencies]
matplotlib = "3.8.4"
plotly = "5.24.1"
seaborn = "0.13.2"
missingno = "0.5.2"

[tool.poetry.group.tensorflow.dependencies]
tensorflow = {version = "2.19.0", extras = ["and-cuda"]}
tensorboard = {version = "2.19.0"}
tensorflow-datasets = {version = "4.9.8"}

[tool.poetry.group.tensorrt.dependencies]
tensorrt = {version = "10.5.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
